fix: update YourListings component layout and adjust image width for better alignment

--- a/src/Components/Styles/Column2.css
+++ b/src/Components/Styles/Column2.css
@@ -34,6 +34,6 @@
 }
 
 .your-listning-img{
-    width: 35%;
+    width: 30%;
     height: 25%;
 }
